Fix dark mode

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -32,7 +32,7 @@
 .style-router{
     margin-bottom:60px;
 }
-.style-dark-mode{
-    background: rgb(33, 33, 33)!important;
-    color: white!important;
+.style-link{
+  text-decoration: underline;
+  cursor: pointer;
 }
